--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -8,6 +8,7 @@
 </head>
   <body>
   <header class="page-header">
+    <a href="https://www.mrmagic.com.au/" class="back-btn" aria-label="Back to Mr Magic site" rel="noopener" target="_blank">← Back</a>
     <div class="header-row">
       <h1>Manuel Index</h1>
     </div>
