--- a/Storm/Storm.html
+++ b/Storm/Storm.html
@@ -19,8 +19,9 @@
     .manual-viewer__title{margin:0 0 14px;font-size:22px;line-height:1.3;font-weight:600;letter-spacing:.5px;text-align:center}
     .manual-viewer__frame{border:1px solid #d8d8d8;border-radius:10px;box-shadow:0 4px 14px rgba(0,0,0,0.12);background:#fff}
     .manual-viewer__frame object{display:block;width:100%;height:1500px}
-    /* pdf.js page canvas styling */
-    #pdfPages canvas{display:block;margin:0 auto 24px;max-width:100%;width:100%;background:#fff;border:1px solid #e1e1e1;border-radius:4px;box-shadow:0 2px 6px rgba(0,0,0,0.08)}
+    /* pdf.js page canvas styling (preserve natural aspect ratio) */
+    #pdfPages{padding:16px 0;}
+    #pdfPages canvas{display:block;margin:0 auto 24px;max-width:100%;width:auto;background:#fff;border:1px solid #e1e1e1;border-radius:4px;box-shadow:0 2px 6px rgba(0,0,0,0.08)}
     @media (max-width: 900px){ .manual-viewer__frame object{height:1100px} }
     /* Mobile: turn frame into scroll container with full viewport height for thumb scrolling */
     @media (max-width: 600px){
@@ -57,22 +58,30 @@
         pdfjsLib.getDocument(pdfUrl).promise.then(doc => {
           let currentPage = 1;
           const total = doc.numPages;
+          const frame = document.querySelector('.manual-viewer__frame');
           const loadNext = () => {
             if(currentPage > total) return;
             const pageNum = currentPage++;
             doc.getPage(pageNum).then(page => {
-              const viewport = page.getViewport({ scale: 1.1 });
+              // Base viewport at scale 1
+              const baseViewport = page.getViewport({ scale: 1 });
+              const availWidth = (frame ? frame.clientWidth : window.innerWidth) - 32; // padding allowance
+              let scale = availWidth / baseViewport.width;
+              // Avoid excessive upscale; keep natural size if smaller
+              if(scale > 1.2) scale = 1.2;
+              if(scale < 1) scale = 1; // do not downscale to prevent blur
+              const viewport = page.getViewport({ scale });
               const canvas = document.createElement('canvas');
               const ctx = canvas.getContext('2d');
-              canvas.width = viewport.width;
-              canvas.height = viewport.height;
+              // High-DPI support
+              const ratio = window.devicePixelRatio || 1;
+              canvas.width = viewport.width * ratio;
+              canvas.height = viewport.height * ratio;
+              canvas.style.width = viewport.width + 'px';
+              canvas.style.height = viewport.height + 'px';
               pagesContainer.appendChild(canvas);
-              page.render({ canvasContext: ctx, viewport }).promise.then(()=>{
-                // Lazy-load trigger: when near bottom, load next page
-                if(pageNum < total){
-                  // Immediate load next to keep simple; could defer to IntersectionObserver
-                  loadNext();
-                }
+              page.render({ canvasContext: ctx, viewport, transform: [ratio,0,0,ratio,0,0] }).promise.then(()=>{
+                if(pageNum < total){ loadNext(); }
               });
             });
           };
