--- a/Smart Wash/Smartwash.html
+++ b/Smart Wash/Smartwash.html
@@ -25,6 +25,8 @@
     .pdf-controls button{font-family:'VCR OSD Mono', monospace;background:#fafafa;border:1px solid #d2d2d2;border-radius:6px;padding:6px 12px;font-size:14px;font-weight:600;cursor:pointer}
     .pdf-controls button:disabled{opacity:.35;cursor:not-allowed}
     .pdf-controls .page-indicator{font-size:14px;font-weight:600}
+    .pdf-controls .zoom-group{display:flex;gap:6px;align-items:center}
+    @keyframes spin{to{transform:rotate(360deg)}}
     @media (max-width: 900px){ .manual-viewer__frame object{height:1100px} }
     @media (max-width: 600px){
       .manual-viewer__frame{height:100vh;overflow-y:auto;-webkit-overflow-scrolling:touch;}
@@ -46,6 +48,14 @@
         <button id="prevPage" disabled>Prev</button>
         <span id="pageIndicator" class="page-indicator">Page 1 / 1</span>
         <button id="nextPage" disabled>Next</button>
+        <div class="zoom-group">
+          <button id="zoomOut" disabled>-</button>
+          <button id="zoomReset" disabled>Reset</button>
+          <button id="zoomIn" disabled>+</button>
+        </div>
+      </div>
+      <div id="pdfLoading" style="display:none;text-align:center;padding:32px 0;">
+        <div style="display:inline-block;width:42px;height:42px;border:4px solid #d2d2d2;border-top-color:#111;border-radius:50%;animation:spin 1s linear infinite;"></div>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.min.js" integrity="sha512-WyQnD6G7QqB0uQMnFZqre1H+X1vEZh1MZkJX2uKJQ7npCwQSoE3o1XX6Yw1sqn/w1JvNeh5AO2gdhukwSzpUdg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -54,7 +64,9 @@
         const pdfUrl = '../Assets/Smart%20Wash%20Operator%20Manual.pdf';
         const pagesContainer = document.getElementById('pdfPages');
         const fallbackObj = document.getElementById('pdfObjectFallback');
-        const usePdfJs = window.matchMedia('(max-width: 600px)').matches;
+        const smallWidth = window.matchMedia('(max-width: 900px)').matches;
+        const coarse = window.matchMedia('(pointer:coarse)').matches;
+        const usePdfJs = (smallWidth || coarse);
         if(!usePdfJs || !window['pdfjsLib']) return;
         if(fallbackObj) fallbackObj.style.display='none';
         pagesContainer.style.display='block';
@@ -65,27 +77,44 @@
           const prevBtn=document.getElementById('prevPage');
           const nextBtn=document.getElementById('nextPage');
           const indicator=document.getElementById('pageIndicator');
+          const zoomOutBtn = document.getElementById('zoomOut');
+          const zoomInBtn = document.getElementById('zoomIn');
+          const zoomResetBtn = document.getElementById('zoomReset');
+          const loadingEl = document.getElementById('pdfLoading');
           controls.style.display='flex';
+          let baseScale=1; let zoomFactor=1; const MIN_ZOOM=0.5; const MAX_ZOOM=2.0;
           function updateControls(){
             indicator.textContent = `Page ${currentPage} / ${total}`;
             prevBtn.disabled = currentPage === 1;
             nextBtn.disabled = currentPage === total;
+            zoomOutBtn.disabled = zoomFactor <= MIN_ZOOM + 0.001;
+            zoomInBtn.disabled = zoomFactor >= MAX_ZOOM - 0.001;
+            zoomResetBtn.disabled = Math.abs(zoomFactor - 1) < 0.001;
+          }
+          function computeBaseScale(page){
+            const baseViewport=page.getViewport({scale:1});
+            const availWidth=(frame?frame.clientWidth:window.innerWidth)-32;
+            let scale=availWidth/baseViewport.width; if(scale>1.2) scale=1.2;
+            baseScale=scale; return scale*zoomFactor;
           }
           function renderPage(num){
             pagesContainer.innerHTML='';
+            loadingEl.style.display='block';
             doc.getPage(num).then(page=>{
-              const baseViewport=page.getViewport({scale:1});
-              const availWidth=(frame?frame.clientWidth:window.innerWidth)-32;
-              let scale=availWidth/baseViewport.width; if(scale>1.2) scale=1.2; // allow downscale
+              const scale=computeBaseScale(page);
               const viewport=page.getViewport({scale});
               const canvas=document.createElement('canvas'); const ctx=canvas.getContext('2d'); const ratio=window.devicePixelRatio||1;
               canvas.width=viewport.width*ratio; canvas.height=viewport.height*ratio; canvas.style.width=viewport.width+'px'; canvas.style.height=viewport.height+'px';
               pagesContainer.appendChild(canvas);
-              page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{ updateControls(); });
+              page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{ loadingEl.style.display='none'; updateControls(); });
             });
           }
           prevBtn.addEventListener('click',()=>{ if(currentPage>1){ currentPage--; renderPage(currentPage); } });
           nextBtn.addEventListener('click',()=>{ if(currentPage<total){ currentPage++; renderPage(currentPage); } });
+          zoomOutBtn.addEventListener('click',()=>{ if(zoomFactor>MIN_ZOOM){ zoomFactor=Math.max(MIN_ZOOM, zoomFactor-0.1); renderPage(currentPage);} });
+          zoomInBtn.addEventListener('click',()=>{ if(zoomFactor<MAX_ZOOM){ zoomFactor=Math.min(MAX_ZOOM, zoomFactor+0.1); renderPage(currentPage);} });
+          zoomResetBtn.addEventListener('click',()=>{ zoomFactor=1; renderPage(currentPage); });
+          let resizeTimer=null; window.addEventListener('resize',()=>{ if(!usePdfJs) return; clearTimeout(resizeTimer); resizeTimer=setTimeout(()=>{ renderPage(currentPage); },250); });
           let touchStartX=null; let touchStartY=null;
           frame.addEventListener('touchstart',e=>{ const t=e.changedTouches[0]; touchStartX=t.clientX; touchStartY=t.clientY; });
           frame.addEventListener('touchend',e=>{ const t=e.changedTouches[0]; if(touchStartX==null) return; const dx=t.clientX-touchStartX; const dy=t.clientY-touchStartY; if(Math.abs(dx)>50 && Math.abs(dy)<40){ if(dx<0 && currentPage<total){ currentPage++; renderPage(currentPage); } else if(dx>0 && currentPage>1){ currentPage--; renderPage(currentPage); } } touchStartX=null; });
