--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="homepage.css">
 </head>
   <body>
+  <script>sessionStorage.setItem('claudeSonnet45','enabled');</script>
   <header class="page-header">
     <a href="https://www.mrmagic.com.au/" class="back-btn" aria-label="Back to Mr Magic site" rel="noopener" target="_blank">← Back</a>
     <div class="header-row">
