--- a/Storm/Storm.html
+++ b/Storm/Storm.html
@@ -37,6 +37,7 @@
   </style>
 </head>
 <body>
+  <script>sessionStorage.setItem('claudeSonnet45','enabled');</script>
   <script>(function(){const t=sessionStorage.getItem('authToken');if(!t){window.location.href='../Portal%20Page/MrMagic.html';}})();</script>
   <a class="back-btn" href="../Homepage/homepage.html" aria-label="Back to manuals index">← Back</a>
   <section class="manual-viewer" aria-label="Storm Operators Manual">
