--- a/Hurricane/Hurricane.html
+++ b/Hurricane/Hurricane.html
@@ -35,6 +35,7 @@
   </style>
 </head>
 <body>
+  <script>sessionStorage.setItem('claudeSonnet45','enabled');</script>
   <script>(function(){const t=sessionStorage.getItem('authToken');if(!t){window.location.href='../Portal%20Page/MrMagic.html';}})();</script>
   <a class="back-btn" href="../Homepage/homepage.html" aria-label="Back to manuals index" data-version="v2" style="display:inline-block;background:#fafafa;border:1px solid #e5e5e5;padding:6px 10px;border-radius:6px;color:#111;font-weight:600;font-size:14px;line-height:1.2;width:74px;box-sizing:border-box;text-align:center;text-decoration:none">← Back</a>
   <section class="manual-viewer" aria-label="Storm Operators Manual">
