--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <script>sessionStorage.setItem('claudeSonnet45','enabled');</script>
   <main class="page">
 
   <!-- Card -->
