--- a/Hurricane/Hurricane.html
+++ b/Hurricane/Hurricane.html
@@ -67,7 +67,9 @@
         const fallbackObj = document.getElementById('pdfObjectFallback');
         const smallWidth = window.matchMedia('(max-width: 900px)').matches;
         const coarse = window.matchMedia('(pointer:coarse)').matches;
-        const usePdfJs = (smallWidth || coarse);
+        const urlParams = new URLSearchParams(location.search);
+        const forceMobile = urlParams.get('mobilePdf') === '1';
+        const usePdfJs = forceMobile || smallWidth || coarse;
         if(!usePdfJs || !window['pdfjsLib']) return;
         if(fallbackObj) fallbackObj.style.display='none';
         pagesContainer.style.display='block';
@@ -84,6 +86,7 @@
           const loadingEl = document.getElementById('pdfLoading');
           controls.style.display='flex';
           let baseScale = 1; let zoomFactor = 1; const MIN_ZOOM=0.5; const MAX_ZOOM=2.0;
+          indicator.textContent='Loading…';
           function updateControls(){
             indicator.textContent = `Page ${currentPage} / ${total}`;
             prevBtn.disabled = currentPage === 1;
@@ -101,17 +104,19 @@
           function renderPage(num){
             pagesContainer.innerHTML='';
             loadingEl.style.display='block';
+            console.log('[PDF] renderPage request',num,'of total',total);
             doc.getPage(num).then(page=>{
               const scale=computeBaseScale(page);
               const viewport=page.getViewport({scale});
               const canvas=document.createElement('canvas'); const ctx=canvas.getContext('2d'); const ratio=window.devicePixelRatio||1;
               canvas.width=viewport.width*ratio; canvas.height=viewport.height*ratio; canvas.style.width=viewport.width+'px'; canvas.style.height=viewport.height+'px';
               pagesContainer.appendChild(canvas);
-              page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{ loadingEl.style.display='none'; updateControls(); });
+              page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{ loadingEl.style.display='none'; updateControls(); console.log('[PDF] render complete page',num); });
             });
           }
           prevBtn.addEventListener('click',()=>{ if(currentPage>1){ currentPage--; renderPage(currentPage); } });
           nextBtn.addEventListener('click',()=>{ if(currentPage<total){ currentPage++; renderPage(currentPage); } });
+          pagesContainer.addEventListener('click',()=>{ if(currentPage<total){ currentPage++; renderPage(currentPage); } });
           zoomOutBtn.addEventListener('click',()=>{ if(zoomFactor>MIN_ZOOM){ zoomFactor=Math.max(MIN_ZOOM, zoomFactor-0.1); renderPage(currentPage);} });
           zoomInBtn.addEventListener('click',()=>{ if(zoomFactor<MAX_ZOOM){ zoomFactor=Math.min(MAX_ZOOM, zoomFactor+0.1); renderPage(currentPage);} });
           zoomResetBtn.addEventListener('click',()=>{ zoomFactor=1; renderPage(currentPage); });
@@ -119,6 +124,7 @@
           let touchStartX=null; let touchStartY=null;
           frame.addEventListener('touchstart',e=>{ const t=e.changedTouches[0]; touchStartX=t.clientX; touchStartY=t.clientY; });
           frame.addEventListener('touchend',e=>{ const t=e.changedTouches[0]; if(touchStartX==null) return; const dx=t.clientX-touchStartX; const dy=t.clientY-touchStartY; if(Math.abs(dx)>50 && Math.abs(dy)<40){ if(dx<0 && currentPage<total){ currentPage++; renderPage(currentPage); } else if(dx>0 && currentPage>1){ currentPage--; renderPage(currentPage); } } touchStartX=null; });
+          console.log('[PDF] Document loaded total pages =', total);
           renderPage(currentPage);
         }).catch(err=>{ console.error('[PDFJS] Hurricane render fail',err); if(fallbackObj) fallbackObj.style.display='block'; pagesContainer.style.display='none'; });
       })();
