--- a/Storm/Storm.html
+++ b/Storm/Storm.html
@@ -99,6 +99,58 @@
           const MAX_ZOOM = 2.0;
           indicator.textContent = 'Loading…';
 
+          // Multi-page scrolling mode (always enabled on mobile request)
+          const multiMode = true; // could gate with query param later
+          if(multiMode){
+            // Hide single-page navigation & zoom for now (optional: leave zoom)
+            prevBtn.style.display='none';
+            nextBtn.style.display='none';
+            zoomOutBtn.style.display='none';
+            zoomInBtn.style.display='none';
+            zoomResetBtn.style.display='none';
+            indicator.textContent = 'Loading pages…';
+            function computeScale(page){
+              const baseViewport = page.getViewport({scale:1});
+              const availWidth = (frame?frame.clientWidth:window.innerWidth)-32;
+              let scale = availWidth/baseViewport.width;
+              if(scale>1.2) scale=1.2; // cap upscale
+              return scale;
+            }
+            let renderedCount = 0;
+            function renderSequential(num){
+              if(num>total){
+                indicator.textContent = `All ${total} pages loaded`;
+                loadingEl.style.display='none';
+                return;
+              }
+              loadingEl.style.display='block';
+              doc.getPage(num).then(page=>{
+                const scale = computeScale(page);
+                const viewport = page.getViewport({scale});
+                const canvas=document.createElement('canvas');
+                const ctx=canvas.getContext('2d');
+                const ratio=window.devicePixelRatio||1;
+                canvas.width=viewport.width*ratio;
+                canvas.height=viewport.height*ratio;
+                canvas.style.width=viewport.width+'px';
+                canvas.style.height=viewport.height+'px';
+                pagesContainer.appendChild(canvas);
+                page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{
+                  renderedCount++;
+                  indicator.textContent = `Loaded ${renderedCount} / ${total}`;
+                  // Yield to event loop for responsiveness
+                  requestAnimationFrame(()=>renderSequential(num+1));
+                });
+              }).catch(err=>{
+                console.error('[PDF] page render error',num,err);
+                requestAnimationFrame(()=>renderSequential(num+1));
+              });
+            }
+            console.log('[PDF] Multi-page mode enabled. Total pages=', total);
+            renderSequential(1);
+            return; // Skip single-page mode below
+          }
+
           function updateControls(){
             indicator.textContent = `Page ${currentPage} / ${total}`;
             prevBtn.disabled = currentPage === 1;
